[gd_scene load_steps=4 format=3 uid="uid://cyhx2i6rkp8p4"]

[ext_resource type="Script" path="res://scenes/tower/tower.gd" id="1_ef7ws"]
[ext_resource type="Texture2D" uid="uid://cd562j5yuitip" path="res://assets/square.png" id="2_mmv3i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fpj8"]

[node name="Tower" type="Node2D"]
script = ExtResource("1_ef7ws")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_1fpj8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mmv3i")

[node name="LevelLabel" type="RichTextLabel" parent="."]
offset_left = -40.0
offset_top = -40.0
mouse_filter = 1
text = "0"
autowrap_mode = 0

[node name="SendingLabel" type="RichTextLabel" parent="."]
offset_left = 30.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 60.0
mouse_filter = 1
text = "0"
autowrap_mode = 0

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
